# algorithm-tool-py

./: README.md  setup.py
algorithm_tool_core/: CMakeLists.txt  test.cpp  test.h  test.i
algorithm_tool_nlp/algorithm_tool_core/: CMakeLists.txt  nlp_algorithm.cpp  nlp_algorithm.h  nlp_algorithm.i
nlp/: __init__.py
